# opengl_notes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  win_cmake.ps1
doc/: AdvancedOpengl.md  Camera.md  CoordinateSystems.md  Framebuffers.md  Introduction.md  Lighting.md  Objects.md  References.md  Shaders.md  Textures.md  ThirdPartyDependencies.md  Transformations.md
examples/src/: ShaderProgram.cpp  ShaderProgram.h  ShaderType.h  camera.h  glew_utils.cpp  glew_utils.h  glfw_utils.cpp  glfw_utils.h  main.cpp  texture_utils.cpp  texture_utils.h  utils.cpp  utils.h
examples/src/tutorials/: lighting.cpp  lighting.h  tutorials.cpp  tutorials.h
examples/src/tutorials/shaders/: cube_rotation_fs.glsl  cube_rotation_vs.glsl  cube_translation_fs.glsl  cube_translation_vs.glsl  lighting_intro_light_source_vs.glsl  lighting_intro_object_fs.glsl  lm_diffuse_map_object_fs.glsl  lm_specular_map_object_fs.glsl  lm_specular_map_object_vs.glsl  material_intro_light_source_fs.glsl  material_intro_object_fs.glsl  material_intro_object_vs.glsl  test_fs.glsl  test_vs.glsl
scripts/win/: cmake_build.bat  cmake_configure.bat  cmake_install.bat
src/: CMakeLists.txt
src/glfw_handler/: CMakeLists.txt  common.cpp  utils.cpp
src/glfw_handler/include/glfw_handler/: common.h  utils.h
src/graphics/: CMakeLists.txt  glsl_shader.cpp
src/graphics/include/graphics/: glsl_shader.h  shader_type.h
src/ui/: CMakeLists.txt  main.cpp
